// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDetails renders correctly with errors 1`] = `
<form
  action="/api/form-handler"
  aria-label="Contact form"
  class="md:max-w-xl"
  method="POST"
  novalidate=""
>
  <input
    name="lang"
    type="hidden"
    value=""
  />
  <input
    name="flow"
    type="hidden"
    value=""
  />
  <div
    class="flex flex-col gap-4 mb-8"
  >
    <div
      class="border-0 border-l-4 pl-5 border-red-700 border-solid"
      data-testid="errors"
    >
      <label
        class="block pb-2 text-lg"
        for="email"
      >
        components.contact-details.form.email.label
      </label>
      <p
        class="text-gray-400 mb-2"
        data-testid="email-hint"
      >
        components.contact-details.form.email.hint
      </p>
      <p
        class="mb-4 text-red-700"
        data-testid="email-error"
        id="email-error"
      >
        components.contact-details.form.email.error
      </p>
      <input
        aria-describedby="email-error"
        aria-invalid="true"
        class="border-red-700 obfuscate w-full h-10 px-3 m-px border rounded focus:outline-purple-700 focus:shadow-focus-outline tool-field"
        data-testid="input-email"
        id="email"
        name="email"
        type="text"
        value=""
      />
    </div>
    <div
      class="border-0 border-l-4 pl-5 border-red-700 border-solid"
      data-testid="errors"
    >
      <label
        class="block pb-2 text-lg"
        for="phone-number"
      >
        components.contact-details.form.phone-number.optional.label
      </label>
      <p
        class="text-gray-400 mb-2"
        data-testid="phone-number-hint"
      >
        components.contact-details.form.phone-number.hint
      </p>
      <p
        class="mb-4 text-red-700"
        data-testid="phone-number-error"
        id="phone-number-error"
      >
        components.contact-details.form.phone-number.error
      </p>
      <input
        aria-describedby="phone-number-error"
        aria-invalid="true"
        class="border-red-700 obfuscate w-full h-10 px-3 m-px border rounded focus:outline-purple-700 focus:shadow-focus-outline tool-field"
        data-testid="input-phone-number"
        id="phone-number"
        name="phone-number"
        type="text"
        value=""
      />
    </div>
    <div
      class="border-0 border-l-4 pl-5 border-red-700 border-solid"
      data-testid="errors"
    >
      <label
        class="block pb-2 text-lg"
        for="post-code"
      >
        components.contact-details.form.post-code.label
      </label>
      <p
        class="text-gray-400 mb-2"
        data-testid="post-code-hint"
      >
        components.contact-details.form.post-code.hint
      </p>
      <p
        class="mb-4 text-red-700"
        data-testid="post-code-error"
        id="post-code-error"
      >
        components.contact-details.form.post-code.error
      </p>
      <input
        aria-describedby="post-code-error"
        aria-invalid="true"
        class="border-red-700 obfuscate w-full h-10 px-3 m-px border rounded focus:outline-purple-700 focus:shadow-focus-outline tool-field"
        data-testid="input-post-code"
        id="post-code"
        name="post-code"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="mb-6"
  >
    <details
      class="group tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-select-focus text-pink-800 underline hover:text-pink-800 hover:no-underline group"
      >
        <svgr-mock
          classname="group-open:rotate-[-180deg] text-pink-600 shrink-0 w-5 mr-2 group-hover:text-pink-800"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          components.contact-details.expandable-section.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px]"
      >
        <p
          class="mb-4"
          data-testid="paragraph"
        >
          components.contact-details.expandable-section.content
        </p>
      </div>
    </details>
  </div>
  <button
    class="border-0 text-white bg-pink-600 hover:bg-pink-800 hover:shadow-none active:bg-pink-900 active:outline-yellow-200 active:text-white t-button px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-500 disabled:shadow-none focus:bg-yellow-200 focus:outline-purple-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none active:shadow-none active:outline-[3px] active:outline-offset-0 t-primary-button w-full my-4 md:w-auto"
    data-testid="continue-button"
    type="submit"
  >
    <span />
    common.continue
    <span />
  </button>
</form>
`;

exports[`ContactDetails renders the component with no errors 1`] = `
<form
  action="/api/form-handler"
  aria-label="Contact form"
  class="md:max-w-xl"
  method="POST"
  novalidate=""
>
  <input
    name="lang"
    type="hidden"
    value=""
  />
  <input
    name="flow"
    type="hidden"
    value=""
  />
  <div
    class="flex flex-col gap-4 mb-8"
  >
    <div
      class=""
      data-testid="errors"
    >
      <label
        class="block pb-2 text-lg"
        for="email"
      >
        components.contact-details.form.email.label
      </label>
      <p
        class="mb-4 text-gray-400"
        data-testid="email-hint"
      >
        components.contact-details.form.email.hint
      </p>
      <input
        aria-invalid="false"
        class="border-gray-400 obfuscate w-full h-10 px-3 m-px border rounded focus:outline-purple-700 focus:shadow-focus-outline tool-field"
        data-testid="input-email"
        id="email"
        name="email"
        type="text"
        value=""
      />
    </div>
    <div
      class=""
      data-testid="errors"
    >
      <label
        class="block pb-2 text-lg"
        for="phone-number"
      >
        components.contact-details.form.phone-number.optional.label
      </label>
      <p
        class="mb-4 text-gray-400"
        data-testid="phone-number-hint"
      >
        components.contact-details.form.phone-number.hint
      </p>
      <input
        aria-invalid="false"
        class="border-gray-400 obfuscate w-full h-10 px-3 m-px border rounded focus:outline-purple-700 focus:shadow-focus-outline tool-field"
        data-testid="input-phone-number"
        id="phone-number"
        name="phone-number"
        type="text"
        value=""
      />
    </div>
    <div
      class=""
      data-testid="errors"
    >
      <label
        class="block pb-2 text-lg"
        for="post-code"
      >
        components.contact-details.form.post-code.label
      </label>
      <p
        class="mb-4 text-gray-400"
        data-testid="post-code-hint"
      >
        components.contact-details.form.post-code.hint
      </p>
      <input
        aria-invalid="false"
        class="border-gray-400 obfuscate w-full h-10 px-3 m-px border rounded focus:outline-purple-700 focus:shadow-focus-outline tool-field"
        data-testid="input-post-code"
        id="post-code"
        name="post-code"
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    class="mb-6"
  >
    <details
      class="group tool-expand"
      data-testid="expandable-section"
    >
      <summary
        class="flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-select-focus text-pink-800 underline hover:text-pink-800 hover:no-underline group"
      >
        <svgr-mock
          classname="group-open:rotate-[-180deg] text-pink-600 shrink-0 w-5 mr-2 group-hover:text-pink-800"
        />
        <div
          class="block"
          data-testid="summary-block-title"
        >
          components.contact-details.expandable-section.title
        </div>
      </summary>
      <div
        class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px]"
      >
        <p
          class="mb-4"
          data-testid="paragraph"
        >
          components.contact-details.expandable-section.content
        </p>
      </div>
    </details>
  </div>
  <button
    class="border-0 text-white bg-pink-600 hover:bg-pink-800 hover:shadow-none active:bg-pink-900 active:outline-yellow-200 active:text-white t-button px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center justify-between gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-500 disabled:shadow-none focus:bg-yellow-200 focus:outline-purple-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none active:shadow-none active:outline-[3px] active:outline-offset-0 t-primary-button w-full my-4 md:w-auto"
    data-testid="continue-button"
    type="submit"
  >
    <span />
    common.continue
    <span />
  </button>
</form>
`;
